--- a/index.css
+++ b/index.css
@@ -1,19 +1,28 @@
 header {
-    background: url('halak.jpg') no-repeat center center;
+    background-color: rgb(90, 79, 61);
     background-size: cover;
     height: 200px; /* Állítsd be a kívánt magasságot */
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(228, 222, 222);
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: Copperplate, fantasy;
+    font-size: 30px;
+    
 }
-<style>
+header span {
+
+    border-radius: 5px;
+    border-width: 15px;
+}
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: rgb(6, 94, 99);
+    background: url('halak.jpg') no-repeat;
+    background-size: 130%;
 
 }
 
@@ -26,18 +35,22 @@ body {
     justify-content: space-around;
 }
 .product {
-    background: rgb(107, 23, 23);
+    background:  rgb(58, 51, 39);
     margin: 15px;
     padding: 15px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 30%;
+    width: 20%;
 }
+
 .product img {
     max-width: 100%;
     height: auto;
 }
+
+
+
 .btn {
     display: inline-block;
     padding: 10px 15px;
@@ -64,4 +77,9 @@ body {
     list-style: none;
     padding: 0;
 }
-</style>
+iframe{
+    border-radius: 5px;
+    border-color: white;
+    margin-top: -550px;
+    padding-left: 60px;
+}
