--- a/index.css
+++ b/index.css
@@ -13,11 +13,12 @@ header img {
     height: 150%;
     width: auto;
     padding-left: 25px;
-    margin-top: -20px;
+    margin-top: -25px;
 }
 header a{
 
-    margin-left: 10%;
+    margin-left: auto;
+    margin-right: 20%;
     margin-top: 1.8%;
 }
 body {
