--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 
+
 header {
     background-color: rgb(90, 79, 61);
     background-size: cover;
@@ -26,19 +27,38 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
     background-color: rgb(6, 94, 99);
     background: url('bckgrnd.jpg') no-repeat;
     background-size: 100%;
 
-=======
-    background-color: #ffffff;
->>>>>>> Stashed changes
-=======
-    background-color: #ffffff;
->>>>>>> Stashed changes
 }
+
+
+div.container {
+    width: 80%;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    margin-left: 200px;
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: flex-start;
+    align-items: flex-start; 
+}
+.container > div {
+    background-color: rgb(14, 191, 214);
+    margin: 10px; 
+    padding: 25px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center; 
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+
 
 .container {
     width: 80%;
